--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -3303,7 +3303,7 @@
  VICTORY_POINTS_4445: "Rutland"
  VICTORY_POINTS_6732: "Boston"
  VICTORY_POINTS_3710: "Springfield"
- VICTORY_POINTS_718: "Pittshield"
+ VICTORY_POINTS_718: "Pittsfield"
  VICTORY_POINTS_905: "Barnstable Town"
  VICTORY_POINTS_3906: "Plymouth"
  VICTORY_POINTS_14576: "New Bedford"
