--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ v1.10.2
   - Fixed a Spanish event error where it would incorrectly show you that you're getting the event "Blaming the ETA" despite  you blaming the Islamists
   - Fixed a NATO decision error where you can join NATO Nuclear Sharing despite already Nuke Sharing
   - Fixed a NATO decision error where you can gain opinion of America as America
+  - Fixed a crash when anyoned tried to puppet Israel upon it's capitulation
 
  Content:
   - New building "Agriculture District"
