--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -65,6 +65,11 @@
  CMW_education_cost_multiplier_modifier_tt: "£education_cost_multiplier_modifier_texticon §YEducation Cost§! Multiplier: [?CMW_education_cost_multiplier_modifier_change|%+] \n"
  CMW_expected_education_modifier: "§YExpected Education Spending§!"
  CMW_expected_education_modifier_tt: "§YExpected Education Spending§!: [?CMW_expected_education_modifier_change|%+] \n"
+ CMW_renewable_energy_gain_multiplier: "Renewable Power Generation Factor"
+ CMW_renewable_energy_gain_multiplier_tt: "§YRenewable Power Generation Factor§!: [?CMW_renewable_energy_gain_multiplier_change|%+] \n"
+ CMW_production_speed_synthetic_refinery_factor: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed"
+ CMW_production_speed_synthetic_refinery_factor_tt: "£construction_speed_texticon §Y$synthetic_refinery$§! construction speed: [?CMW_production_speed_synthetic_refinery_factor_change|%+] \n"
+
 
  ##### Focus Tree #####
  CMW_Aso_Rock_Declaration: "Aso Rock Declaration"
@@ -139,8 +144,14 @@
  CMW_Education_Framework_desc: "The Commonwealth Education Framework is a comprehensive system for guiding education policies and practices in Commonwealth member states."
  CMW_CFTC: "CFTC"
  CMW_CFTC_desc: "The Commonwealth Fund for Technical Co-operation (CFTC) is a financial mechanism that assists Commonwealth member countries in implementing technical cooperation projects and initiatives for development."
-
-
+ CMW_Debt_Swaps: "Commonwealth Debt Swaps"
+ CMW_Debt_Swaps_desc: "Commonwealth Debt Swaps refer to financial agreements or initiatives within the Commonwealth that involve the exchange or restructuring of debt as a means to address economic and financial challenges in member countries."
+ CMW_Climate_Hub: "Commonwealth Climate Finance Access Hub"
+ CMW_Climate_Hub_desc: "The Commonwealth Climate Finance Access Hub is a platform established within the Commonwealth to facilitate access to climate finance and support for member countries in addressing climate change and sustainability-related initiatives."
+ CMW_Blue_Charter: "Commonwealth Blue Charter"
+ CMW_Blue_Charter_desc: "The Commonwealth Blue Charter is a commitment by Commonwealth member countries to collaborate in addressing and protecting the health and sustainability of the world's oceans and marine environments."
+ CMW_Living_Lands: "Living Lands Charter"
+ CMW_Living_Lands_desc: ""
 
  ##### Events #####
  # Leaving CMW
