--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -229,9 +229,9 @@
  SPR_navantia_naval_manufacturer2: "纳凡蒂亚"
  SPR_airbus_defence_aircraft_manufacturer: "空中客车防务"
  SPR_casa_aircraft_manufacturer: "西班牙航空制造"
- SPR_airbus_helicopters_tank_manufacturer: "空中客车直升机公司"
- SUD_military_industry_corporation_materiel_manufacturer: "军事工业公司"
- SUD_military_industry_corporation_tank_manufacturer: "军事工业公司"
+ SPR_airbus_helicopters_tank_manufacturer: "空中客车直升机公司 - 直升机部门"
+ SUD_military_industry_corporation_materiel_manufacturer: "军事工业公司 - 材料部门"
+ SUD_military_industry_corporation_tank_manufacturer: "军事工业公司 - 装甲部门"
  SWE_bae_systems_hagglunds_tank_manufacturer: "英国宇航系统集团赫格隆德"
  SWE_bae_systems_bofors_tank_manufacturer: "英国宇航系统集团博福斯"
  SWE_saab_bofors_dynamics_materiel_manufacturer: "萨博博福斯动力公司"
