--- a/localisation/simp_chinese/MD_international_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_international_l_simp_chinese.yml
@@ -201,3 +201,31 @@
  ct_region_asia_button_text: "中亚"
  ct_region_africa_button_text: "撒哈拉以南非洲"
  ct_region_me_button_text: "中东"
+ CT_terror_radicalization_text_delayed: "此值表示一个国家当前的§Y极端化§!水平。§Y极端化§!值可能根据各种条件有不同的最小值和最大值。这些条件包括一个国家是否处于战争状态、腐败程度高、稳定性低、是圣战政府、完成特定国家重点或国民生产总值低。\n\n[CT_radicalization_clamp_display]"
+ CT_radicalization_clamp_one: "\n[THIS.GetNameWithFlag] §Y极端化§!上限：100\n[THIS.GetNameWithFlag] §Y极端化§!下限：30"
+ CT_radicalization_clamp_two: "\n[THIS.GetNameWithFlag] §Y极端化§!上限：100\n[THIS.GetNameWithFlag] §Y极端化§!下限：20"
+ CT_radicalization_clamp_three: "\n[THIS.GetNameWithFlag] §Y极端化§!上限：100\n[THIS.GetNameWithFlag] §Y极端化§!下限：10"
+ CT_radicalization_clamp_four: "\n[THIS.GetNameWithFlag] §Y极端化§!上限：100\n[THIS.GetNameWithFlag] §Y极端化§!下限：0"
+ CT_terror_threat_text_delayed: "此值表示一个国家当前的§Y威胁等级§!。§Y威胁等级§!的数值可以根据各种条件具有不同的最小值和最大值。这些条件包括一个国家是否处于战争状态、腐败程度高、稳定性低、是圣战政府、完成特定国家重点或国民生产总值低。\n\n[THIS.CT_threat_level_clamp_display]"
+ CT_threat_level_clamp_one: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：100\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：30"
+ CT_threat_level_clamp_two: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：90\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：50"
+ CT_threat_level_clamp_three: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：70\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：30"
+ CT_threat_level_clamp_four: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：60\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：20"
+ CT_threat_level_clamp_five: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：50\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：10"
+ CT_threat_level_clamp_six: "\n[THIS.GetNameWithFlag] §Y威胁等级§!上限：40\n[THIS.GetNameWithFlag] §Y威胁等级§!下限：0"
+ MOR_promote_tolerant_islam: "§Y促进§!伊斯兰中间主义"
+ MOR_promote_tolerant_islam_desc: "摩洛哥以其对伊斯兰教的温和解读而闻名。摩洛哥的“温和”原则融合了马利基伊斯兰教法学派、阿什里神学和逊尼派苏菲主义。摩洛哥王国一直认为，预防恐怖主义的最有效方法是传播这种温和的伊斯兰教，以抵消极端主义的解读。\n\n我们可以通过在其他国家产生§Y影响力§!来确保更多国家接受我们的教导。"
+ OMA_promote_tolerant_islam: "§Y促进§!伊巴迪伊斯兰教"
+ OMA_promote_tolerant_islam_desc: "阿曼社会基本不受极端伊斯兰思想的影响。这在很大程度上是由于伊巴迪派伊斯兰教的盛行，该派提倡对其他宗教的宽容。伊巴迪派主张和平解决争端，而不是对抗，因此不易激进化。阿曼一直认为，预防恐怖主义最有效的方法是传播伊巴迪派伊斯兰教以抵制极端思想。\n\n我们可以通过在其他国家产生§Y影响力§!来确保更多国家接受我们的教导。"
+ MENA_terror_fund_deradicalisation_programmes: "§Y资助§!去激进化计划"
+ MENA_terror_fund_deradicalisation_programmes_desc: "被监禁的圣战分子并非不可救药。极端组织中的许多低级成员只是误入歧途的年轻人，他们成为宣扬对穆斯林同胞施以死亡的异端伊斯兰教的受害者。我们应该实施去极端化计划，让这些心灰意冷的年轻男女重新融入社会。这些计划的有效性与我们的福利支出息息相关。"
+ terror_fund_deradicalisation_programmes_tt: "你的§Y$social_budget$§!越高，§Y去激进化计划§!就越有效。\n\n"
+ MENA_terror_ct_training: "§Y开展§!反恐培训"
+ MENA_terror_ct_training_desc: "为了最大限度地提高我们对恐怖主义威胁的反应能力，我们应不断更新安全部门的准备情况。我们的§Y军官培训§!越好，我们在领土上驻扎的外国顾问越多，这种培训就越有效。"
+ terror_ct_training: "§Y反恐训练§!水平（当前：[?ct_training|Y2]）决定了突袭和空袭成功的可能性。\n§Y反恐训练§!水平取决于外国顾问的数量（当前外国顾问：[?foreign_adivsors|Y0]）和我们现在的军官训练法律。\n\n每个外国顾问将提高§Y反恐训练§!水平§G+0.25§!（当前外国顾问：[?foreign_adivsors|Y0]）\n§Y$officer_advanced_training$§!以上的每集§Y$Officer_Training_Law$§!将提高§Y反恐训练§!水平§G+0.50§!\n\n开展培训将通过[?foreign_advisors_math|+G]提高我们的§Y反恐训练§!水平\n\n§R反恐训练水平上限为10§!同时§R每月§!递减§R0.2§!。"
+ MENA_terror_conduct_raid: "§Y突袭§!恐怖分子藏身处"
+ MENA_terror_conduct_raid_desc: "我们的安全部门已发现我国境内有恐怖分子藏身之处。我们应该派出特种部队突袭，逮捕圣战嫌疑人并缴获非法武器。这些突袭行动成功的可能性取决于我们的安全人员接受的反恐训练程度。"
+ terror_conduct_raid_tt: "如果突袭§G成功§!，§Y恐怖威胁§!程度将降低§G-5§!（当前威胁：[?threat_level|Y0]）同时§Y极端化§!将增加§R+2§!（当前极端化：[?radicalization|Y0]）。\n如果突袭§R失败§!，§Y恐怖威胁§!程度将无变化同时§Y极端化§!将增加§R+5§! 当前极端化：[?radicalization|Y0]）。\n§G比空袭有更高的成功率。§!\n\n突袭有§Y40%§!的基础成功率\n每一级别的§Y反恐训练§!增加§G+5.00%§!的成功率。\n（当前§Y反恐训练§!级别：[?ct_training|Y2]）\n\n\n"
+ MENA_terror_conduct_strike: "对恐怖分子藏身处§Y发动§!空袭"
+ MENA_terror_conduct_strike_desc: "在该国偏远地区，中央政府权力有限，有多个圣战分子藏身处。我们应该用空袭来消灭这些圣战分子的威胁。这些袭击成功的可能性取决于我们的安全人员接受的反恐训练程度。"
+ terror_conduct_strike_tt: "如果空袭§G成功§!，§Y恐怖威胁§!程度将降低§G-5§!（当前威胁：[?threat_level|Y0]）同时§Y极端化§!将增加§R+2§!（当前极端化：[?radicalization|Y0]）。\n如果空袭§R失败§!，§Y恐怖威胁§!程度将无变化同时§Y极端化§!将增加§R+5§!（当前极端化：[?radicalization|Y0]）。\n§R成功的可能性比突袭要低。§!\n\n空袭有§Y25%§!的基础成功率\n每一级别的§Y反恐训练§!增加§G+5.00%§!的成功率。\n（当前§Y反恐训练§!级别：[?ct_training|Y2]\n\n"
