--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -856,8 +856,8 @@
  CHI_Sign_Strategic_Partnership_Agreement_desc: "An offical agreement between our two countries will consolidate our recent diplomatic gains and incentivize the Japanese to reduce their reliance on American military protection."
  CHI_Decouple_Japan: "Break the Chain"
  CHI_Decouple_Japan_desc: "The time has come to decouple Japan from America's influence once and for all. Securing an American withdrawal will make our security position in the region significantly more secure."
- CHI_The_Northern_Shiled: "The Northern Shiled"
- CHI_The_Northern_Shiled_desc: "In history, the enemy of China always come from north,it is necessary to keep our border away from our capital, and take back our northern shiled. \n'Therefore, those who reestablish the Xinjiang will protect Mongolia; those who protect Mongolia will defend the capital.'"
+ CHI_The_Northern_Shield: "The Northern Shield"
+ CHI_The_Northern_Shield_desc: "In history, the enemy of China always come from north,it is necessary to keep our border away from our capital, and take back our northern shield. \n'To restore Xinjiang is to protect Mongolia, and to protect Mongolia is to defend the capital'"
  CHI_Inscription_of_Yanran: "Inscription of Yanran"
  CHI_Inscription_of_Yanran_desc: "In 89 AD, general Dou Xian led the army of the Han dynasty won the battle against the northern Huns at the Altai Mountains. The battle was a decisive victory for the Han dynasty. After the battle, Dou Xian held a memorial ceremony for the Tian at Mount Yanran. He ordered inscriptions to be carved on the cliff face to commemorate the victory. The northern Huns escaped and disappear in Chinese history after this battle. "
  CHI_Ceremony_in_Khentii_Mountains: "Ceremony in Khentii Mountains"
