Uar CTD bug fix

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -33,6 +33,7 @@ v1.10.2
   - Fixed being able to integrate Formable nations without owning everything required for the formable
   - Fixed the Counter Terror advisors remaining after war declarations
   - Fixed a display issue in the CT system not showing Threat Level/Radicalization min/max
+  - Fixed a crash related to puppeting a non-Arab country as the UAR
 
  Content:
   - New building "Agriculture District"
