--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8031,7 +8031,7 @@
  TAJ.conservatism_icon: "£TAJ_western_conservative"
  TAJ.conservatism_desc: ""
  TAJ.socialism: "£TAJ_western_social_democrat Hizbi Sotsial-Demokratii Tojikiston"
- TAJ.socialism_icon: "TAJ_western_social_democrat"
+ TAJ.socialism_icon: "£TAJ_western_social_democrat"
  TAJ.socialism_desc: ""
  TAJ.Communist-State: "£TAJ_emerging_communism Hizbi Kommunistiyi Tojikiston"
  TAJ.Communist-State_icon: "£TAJ_emerging_communism"
