--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8054,7 +8054,7 @@
  TAJ.neutral_Social_icon: "£TAJ_non_aligned_socialist_democrat"
  TAJ.neutral_Social_desc: ""
  TAJ.Neutral_Muslim_Brotherhood: "£TAJ_non_aligned_moderate_islamist Lali Badakhshan"
- TAJ.Neutral_Muslim_Brotherhood_icon: "TAJ_non_aligned_moderate_islamist"
+ TAJ.Neutral_Muslim_Brotherhood_icon: "£TAJ_non_aligned_moderate_islamist"
  TAJ.Neutral_Muslim_Brotherhood_desc: ""
  TAJ.Nat_Autocracy: "£generic_Nat_Autocracy_small Quvvahoi Musallahi Jumhurii Tojikiston"
  TAJ.Nat_Autocracy_desc: ""
