--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -320,7 +320,8 @@
  OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the [HKG.GetFlag]Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
- LEGCO_BOOST_APPROVAL_SEAT_TT: "Cost 50 PP for a seat."
+ LEGCO_BOOST_APPROVAL_SEAT_TT: "Pay off an Approval Seat."
+ LEGCO_BOOST_APPROVAL_SEAT_DESC_TT: "Cost §Y50§! Power Points to pay off §G1§! approval seat to try to pass the motion."
 
  legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
  legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n £HK_Left Left 21\n £HK_Fourth_International Revolutionary Communist Party of China\n"
@@ -343,7 +344,7 @@
  legco_require_votes: "You need to have more than §Y[?legco_required_seats|0] §Gapproval§! seats§! to pass the motion."
  legco_none_motion_tt: "None"
  legco_clock_trigger_tt: "There is a motion currently being voted on."
- legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (§G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
+ legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (Current: §G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
  legco_race_discrimination_bill_tt: "Race Discrimination Bill"
@@ -361,9 +362,9 @@
  legco_effect_electoral_reform_tt: "This motion's effect is decided by §YMainland's goverment choice§!."
 
  legco_test_text: "<WIP>"
- legco_election_reform_a_effect_tt: "§YEffect:§!\n §OMaintain the status quo§!\n§RThis may cause some to be upset.§!"
- legco_election_reform_b_effect_tt: "§YEffect:§!\n The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y800§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n §gThe \"timetable for universal suffrage\" wouldn't be drawn up.§!\n§YThis may cause some to be upset.§!"
- legco_election_reform_c_effect_tt: "§YEffect:§!\n Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!."
+ legco_election_reform_a_effect_tt: "§OMaintain the status quo§!\n§RThis may cause some to be upset.§!"
+ legco_election_reform_b_effect_tt: "The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y800§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n §gThe \"timetable for universal suffrage\" wouldn't be drawn up.§!\n§YThis may cause some to be upset.§!"
+ legco_election_reform_c_effect_tt: "Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!."
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
