UPDATE: mission of special motion

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -343,7 +343,7 @@
  legco_current_motion: "§Y[ROOT.legco_current_motion]§!"
  legco_motion_effect: "[ROOT.legco_motion_effect]"
  legco_require_votes: "You need to have more than §Y[?legco_required_seats|0] §Gapproval§! seats§! to pass the motion."
- legco_none_motion_tt: "None"
+ legco_none_motion_tt: "Recess"
  legco_clock_trigger_tt: "There is a motion currently being voted on."
  legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (Current: §G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
