heung yee kuk effect completed

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -270,6 +270,7 @@
  legacy_of_handover_hong_kong_desc: ""
  disloyal_heung_yee_kuk: "Disloyal Heung Yee Kuk"
  disloyal_heung_yee_kuk_desc: ""
+ loyal_heung_yee_kuk: "Loyal Heung Yee Kuk"
  corrupt_politicians: "Corrupt Politicians"
  corrupt_politicians_desc: ""
  HKG_victoria_harbour: "Victoria Harbour"
@@ -322,7 +323,7 @@
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
  LEGCO_BOOST_APPROVAL_SEAT_TT: "Pay off an Approval Seat."
- LEGCO_BOOST_APPROVAL_SEAT_DESC_TT: "Cost §Y50§! Power Points to pay off §G1§! approval seat to try to pass the motion."
+ LEGCO_BOOST_APPROVAL_SEAT_DESC_TT: "Cost §Y50§! Political Powers to pay off §G1§! approval seat to try to pass the motion."
 
  legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
  legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n £HK_Left Left 21\n £HK_Fourth_International Revolutionary Communist Party of China\n"
