--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -6,13 +6,13 @@
  HKG_combat_vested_interests: "Combat Vested Interests"
  HKG_combat_vested_interests_desc: "The New Year has passed, everything is renewed. The advent of the milliennium has brought a new future for Hong Kong."
  HKG_take_on_heung_ye_kuk: "Take on the Heung Yee Kuk"
- HKG_take_on_heung_ye_kuk_desc: "Heung Yee Kuk is a product of the olden days of the New Territories, and has a transcendent independence compared to other areas. But they are not as obedient as we expected, so it seems that we have to give them some warn properly..."
+ HKG_take_on_heung_ye_kuk_desc: "Heung Yee Kuk is a product of the olden days of the New Territories during the British rule, and has a transcendent independence compared to other areas. We must strengthen our control there to ensure that our policies can really be implemented."
  HKG_repeal_small_house_policy: "Repeal the Small House Policy"
- HKG_repeal_small_house_policy_desc: ""
+ HKG_repeal_small_house_policy_desc: "The Small House Policy being a policy of the feudal era, has long since ceased to meet the present situation of housing shortage in Hong Kong. It must be abolished."
  HKG_reform_heung_yee_kuk: "Reform the Heung Yee Kuk"
- HKG_reform_heung_yee_kuk_desc: ""
+ HKG_reform_heung_yee_kuk_desc: "The New Territories can't do without Heung Yee Kuk, but it needs a reform to be more responsive to us."
  HKG_dissolve_heung_yee_kuk: "Dissolve the Heung Yee Kuk"
- HKG_dissolve_heung_yee_kuk_desc: ""
+ HKG_dissolve_heung_yee_kuk_desc: "Fuck the Heung Yee Kuk, disbanding them is the only way to take complete control of the NT."
  HKG_take_on_politicians: "Take on the Politicians"
  HKG_take_on_politicians_desc: "Hong Kong's government is still full of bureaucrats from the old days. In order to stabilise the regime, we must tackle them."
  HKG_ensure_autonomy_of_ICAC: "Ensure the Autonomy of the ICAC"
@@ -52,7 +52,7 @@
  HKG_a_broader_electorate: "A Broader Electorate?"
  HKG_a_broader_electorate_desc: "Universal suffrage in Hong Kong cannot be implemented overnight. Although we cannot implement universal suffrage immediately, we can first request the NPCSC to expand the number of members of the Election Committee, let the election can be more democratic than before."
  HKG_choose_your_own_puppet: "\"Choose Your Own Puppet\""
- HKG_choose_your_own_puppet_desc: "Universal suffrage in Hong Kong must be achieved, but we must not lose our stability for the sake of democracy. The nominating committee will ensure that only those who are truly "patriotic for China and Hong Kong" will become the Chief Executive."
+ HKG_choose_your_own_puppet_desc: "Universal suffrage in Hong Kong must be achieved, but we must not lose our stability for the sake of democracy. The nominating committee will ensure that only those who are truly \"patriotic for China and Hong Kong\" will become the Chief Executive."
  HKG_a_new_reform_attempt: "A New Reform Attempt"
  HKG_a_new_reform_attempt_desc: ""
  HKG_support_pan_democrats: "Support the Pan-Democrats"
