--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -286,16 +286,18 @@
  CHI_Netizen_Nation_desc: "The internet is not a substantial threat to our authority. In fact, we may even be able to use it to our advantage."
  CHI_An_Open_Window: "An Open Window"
  CHI_An_Open_Window_desc: "Deng Xiaoping once famously described the opening up of China as opening a window for fresh air. While, as Deng also said, some \"flies\" are bound to fly in when this happens, this is a risk we must take to enjoy the benefits of openness."
- CHI_Let_a_Hundred_Flowers_Bloom: "Let a Hundred Flowers Bloom"
- CHI_Let_a_Hundred_Flowers_Bloom_desc: "In 1956, Mao Zedong initiated the Hundred Flowers Campaign, calling for Chinese citizens to openly air their grievances towards the government. While that campaign ended in repression and a return to the status quo, a reboot of the same campaign does not necessarily have to end the same way."
+ CHI_Let_Hundred_Birds_Singing_Together: "Let Hundred Birds Singing Together"
+ CHI_Let_Hundred_Birds_Singing_Together_desc: ""
+ CHI_Let_Hundred_Flowers_Bloom_Again: "Let a Hundred Flowers Bloom"
+ CHI_Let_Hundred_Flowers_Bloom_Again_desc: "In 1956, Mao Zedong initiated the Hundred Flowers Campaign, calling for Chinese citizens to openly air their grievances towards the government. While that campaign ended in repression and a return to the status quo, a reboot of the same campaign does not necessarily have to end the same way."
  CHI_Freedom_of_Speech: "Freedom of Speech"
  CHI_Freedom_of_Speech_desc: "Now that we have allowed our citizens to air their grievances, it has become clear that our society has progressed to the point where such things can be said in public without threatening the stability of the nation. We should proceed with further."
  CHI_Allow_Foreign_Social_Media: "Allow Foreign Social Media"
  CHI_Allow_Foreign_Social_Media_desc: "Social media sites like Facebook are starting to gain traction. Despite the risks, we should allow these sites to operate in our country as part of our \"Open Window\" policy."
  CHI_Liberalize_the_Media: "Liberalize the Media"
  CHI_Liberalize_the_Media_desc: "Up till this point, all forms of media in China have had a strong state influence whether directly or indirectly. The time has come for us to end this."
- CHI_End_Catch-all_Crime: "End Catch-all Crime"
- CHI_End_Catch-all_Crime_desc: ""
+ CHI_End_Catch_all_Crime: "End Catch-all Crime"
+ CHI_End_Catch_all_Crime_desc: ""
  CHI_Freedom_of_Speech: "Freedom of Speech"
  CHI_Freedom_of_Speech_desc: "Now that we have allowed our citizens to air their grievances, it has become clear that our society has progressed to the point where such things can be said in public without threatening the stability of the nation. We should proceed with further."
  CHI_Remove_Restrictions_on_Party_Formation: "Remove Restrictions on Party Formation"
