"A Broader Electorate?" effect

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -349,24 +349,27 @@
  legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (Current: §G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
- legco_race_discrimination_bill_tt: "Race Discrimination Bill"
  legco_electoral_reform_forward_tt: "The Proposals for selecting the Chief Executive and forming the LegCo"
  legco_funding_XRL_tt: "Funding of §3XRL HK section§!"
  legco_co_location_bill_tt: "Co-Location Bill"
+ legco_race_discrimination_bill_tt: "Race Discrimination Bill"
+ legco_a_broader_electorate_tt: "Package of Proposals for Methods Selecting Chief Executive and Forming LegCo"
 
  legco_race_discrimination_bill_focus_tt: "The Motion §YRace Discrimination Bill§! will be voted in the §YLegCo§!."
  legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!."
  legco_approve_funding_for_XRL_focus_tt: "The §YFunding§! of §3XRL HK section§! will be voted in the §YLegCo§!."
  legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§! after Mainland's Goverment §Raccept it§!."
+ legco_a_broader_electorate_focus_tt: "The Motion §YPackage of Proposals for Methods Selecting Chief Executive and Forming LegCo§! will be voted in the §YLegCo§! after Mainland's Goverment §Raccept it§!."
 
  legco_effect_railway_development_strategy_2000_tt: "Gains '§YRailway Development Strategy 2000§!', which grants() for §Y3650§! day(s)."
  legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]Hong Kong §YTreasury§!: $-0.25 Billion\n§YHong Kong§! Add §G1§! §YRailways§! in a Province in the state.\n([CHI.GetFlag]People's Republic of China)[CHI.GetFlag]Chinese §YTreasury§!: $-0.75 Billion\n§YPearl River Delta§!:\n  Add §G3§! §YRailways§! in a province in the state."
  legco_effect_electoral_reform_tt: "This motion's effect is decided by §YMainland's goverment choice§!."
-
- legco_test_text: "<WIP>"
  legco_election_reform_a_effect_tt: "§OMaintain the status quo§!\n§RThis may cause some to be upset.§!"
  legco_election_reform_b_effect_tt: "The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y800§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n §gThe \"timetable for universal suffrage\" wouldn't be drawn up.§!\n§YThis may cause some to be upset.§!"
  legco_election_reform_c_effect_tt: "Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!."
+ legco_a_broader_electorate_effect_tt: "The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y1200§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n"
+
+ legco_test_text: "<WIP>"
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
