--- a/Changelog.txt
+++ b/Changelog.txt
@@ -34,6 +34,7 @@ v1.10.2
   - Fixed the Counter Terror advisors remaining after war declarations
   - Fixed a display issue in the CT system not showing Threat Level/Radicalization min/max
   - Fixed a crash related to puppeting a non-Arab country as the UAR
+  - Removed double Kosovo from the Bookmarks
 
  Content:
   - New building "Agriculture District"
