GFX work on plane modules

--- a/localisation/english/plane_designer_l_english.yml
+++ b/localisation/english/plane_designer_l_english.yml
@@ -247,12 +247,12 @@
  rocket_weapons_1_desc: "Early rocket pods allowed aircraft to have a rapid method to engage targets with a precise saturation of high explosive warheads, for a significantly cheaper price tag than guided ordinance."
  rocket_weapons_2: "Modern Unguided Rockets"
  rocket_weapons_2_desc: "More precise rockets and warhead advancements made these weapon systems a significant step up from their earlier counterparts, while still being a cheap and effective way to provide close air support and strike mission capabilities to aircraft."
- countermeasures_1: "Early Countermeasures"
- countermeasures_1_desc: "As missiles jumped onto the scene, aircraft needed a way to defend themselves from attack that didn't rely on trying to just outrun or dodge a missile. Chaff and flares provided decoys that allowed pilots to attempt to deceive incoming missile threats."
- countermeasures_2: "Modern Countermeasures"
- countermeasures_2_desc: "As computers got smarter and faster, it became simpler to automate certain tasks in an aircraft. With these systems, aircraft can automatically run a program to deploy countermeasures when under attack, at the optimum moment to maximize their chance to evade the attack."
- countermeasures_3: "Electronic Warfare Defensive Countermeasures"
- countermeasures_3_desc: "As BVR combat became king, the ability to stop your opponent from seeing or locking you became more and more crucial. Jamming pods and internal jammers allow aircraft to stop an enemy's radar from detecting or locking them by filling their radar with false returns, requiring large amounts of power to burn through."
+ countermeasures_1: "Countermeasures and early RWR"
+ countermeasures_1_desc: "As missiles jumped onto the scene, aircraft needed a way to defend themselves from attack that didn't rely on trying to just outrun or dodge a missile. Chaff and flares provided decoys that allowed pilots to attempt to deceive incoming missile threats while Radar Warning Receivers alerted the pilot when his plane was locked by a radar."
+ countermeasures_2: "Countermeasures and modern RWR"
+ countermeasures_2_desc: "While countermeasures didn't change much, modern RWR now display crucial information such as the type of radar, the distance. Modern missile warning systems can also deploy countermeasures automatically when detecting a missile."
+ countermeasures_3: "Electronic Warfare Suite"
+ countermeasures_3_desc: "Planes can now carry their own advanced eletronic warfare equipment without having to rely on dedicated jamming aircrafts. These powerful systems provide unparalleled protection against ever more lethal threats. Multispectrum flares provides further protection against modern IR missiles."
  countermeasures_4: "Laser Hard-Kill Countermeasures"
  countermeasures_4_desc: "As missile threats become harder and harder to decoy, the mission shifts from dodging to destroying. These systems mounted on aircraft use high powered lasers to either disable the guidance systems on an incoming missile, or to detonate the warhead before it reaches it's target."
  rapid_dragon: "Palletized ALCMs"
@@ -553,12 +553,12 @@
  spec_thrust_vector_2_desc: "Thrust vectoring systems designed to increase maneuverability.\n\n§GDesigner Hint: Use this module to increase an aircraft's air defense, at the cost of reliability. Recommended when you want to create a more durable aircraft without paying stealth costs.§!"
  spec_thrust_vector_3: "Dual Axis Thrust Vectoring"
  spec_thrust_vector_3_desc: "Advanced thrust vectoring that allows increased maneuverability across multiple axis.\n\n§GDesigner Hint: Use this module to increase an aircraft's air defense, at the cost of reliability. Recommended when you want to create a more durable aircraft without paying stealth costs.§!"
- spec_countermeasures_1: "Early Countermeasures"
+ spec_countermeasures_1: "Countermeasures and early RWR"
  spec_countermeasures_1_desc: "Early defensive options against missile attacks.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
- spec_countermeasures_2: "Modern Countermeasures"
+ spec_countermeasures_2: "Countermeasures and modern RWR"
  spec_countermeasures_2_desc: "Modern chaff and flares.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
- spec_countermeasures_3: "Radar Jamming Pod"
- spec_countermeasures_3_desc: "EW Missile defense for radar guided missiles.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
+ spec_countermeasures_3: "Electronic Warfare Suite"
+ spec_countermeasures_3_desc: "EW Suite.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
  spec_countermeasures_4: "Laser Hard-Kill System"
  spec_countermeasures_4_desc: "Hard-Kill countermeasures to protect against all missile threats.\n\n§GDesigner Hint: Blanket increase in an aircraft's air defense stat, along with an increase to radar advantage. It is recommended to have at least one countermeasure module on an aircraft, especially if the aircraft does not have any stealth modules.§!"
 
