--- a/localisation/russian/plane_designer_l_russian.yml
+++ b/localisation/russian/plane_designer_l_russian.yml
@@ -235,12 +235,12 @@
  rocket_weapons_1_desc: "Ранние ракетные капсулы позволяли самолётам быстро поражать цели с точным насыщением боевой части фугасными боеприпасами, что обходилось значительно дешевле, чем управляемые боеприпасы."
  rocket_weapons_2: "Современные неуправляемые ракеты"
  rocket_weapons_2_desc: "Более точные ракеты и усовершенствованные боеголовки сделали эти системы значительным шагом вперед по сравнению с более ранними аналогами, оставаясь при этом дешевым и эффективным средством обеспечения ближней авиационной поддержки и ударных задач для самолётов."
- countermeasures_1: "Ранние меры противодействия"
- countermeasures_1_desc: "С появлением ракет самолеты стали нуждаться в способах защиты от атак, которые не сводились бы к попыткам просто опередить или уклониться от ракеты. Зенитные и осветительные ракеты служили ложными целями, позволяя пилотам пытаться обмануть приближающуюся ракетную угрозу."
- countermeasures_2: "Современные меры противодействия"
- countermeasures_2_desc: "По мере того как компьютеры становились все умнее и быстрее, стало проще автоматизировать выполнение определенных задач в самолете. С помощью таких систем самолет может автоматически запускать программу по развертыванию контрмер при атаке в оптимальный момент, чтобы максимально увеличить шансы уклониться от атаки."
- countermeasures_3: "Защитные средства радиоэлектронной борьбы"
- countermeasures_3_desc: "По мере становления BVR-боя все большее значение приобретала способность помешать противнику обнаружить или зафиксировать вас. Помехозащитные капсулы и внутренние глушители позволяют самолетам не дать радарам противника обнаружить или зафиксировать их, заполняя их радары ложными сигналами, что требует больших затрат энергии."
+ countermeasures_1: "Контрмеры и ранний RWR"
+ countermeasures_1_desc: "Когда на место происшествия прибыли ракеты, самолетам потребовался способ защиты от атаки, который не сводился бы просто к попыткам обогнать или уклониться от ракеты. Chaff и Flares представляли собой приманки, которые позволяли пилотам пытаться обмануть приближающиеся ракетные угрозы, пока Приемники радиолокационного предупреждения предупредили пилота, когда его самолет был заблокирован радаром."
+ countermeasures_2: "Контрмеры и современные RWR"
+ countermeasures_2_desc: "Хотя меры противодействия не сильно изменились, современные RWR теперь отображают важную информацию, такую ​​как тип радара и расстояние. Современные системы предупреждения о ракетном нападении также могут автоматически применять меры противодействия при обнаружении ракеты."
+ countermeasures_3: "Комплект средств радиоэлектронной борьбы"
+ countermeasures_3_desc: "Самолеты теперь могут нести собственное современное оборудование радиоэлектронной борьбы без необходимости использования специального самолета для постановки помех. Эти мощные системы обеспечивают беспрецедентную защиту от все более смертоносных угроз."
  countermeasures_4: "Лазерные средства жёсткого поражения"
  countermeasures_4_desc: "Поскольку ракетные угрозы становится всё труднее и труднее обмануть, задача переходит от уклонения к уничтожению. Эти системы, установленные на самолётах, используют мощные лазеры для того, чтобы либо вывести из строя системы наведения на подлетающей ракете, либо взорвать боеголовку до того, как она достигнет цели."
  rapid_dragon: "Паллетированные ALCM"
@@ -536,11 +536,11 @@
  spec_thrust_vector_2_desc: "Системы векторизации тяги, предназначенные для повышения маневренности.\n\n§GПодсказка дизайнера: этот модуль используется для повышения противовоздушной обороны самолёта ценой снижения надежности. Рекомендуется для создания более прочного самолёта без затрат на стелс.§!"
  spec_thrust_vector_3: "Двухосевое векторирование тяги"
  spec_thrust_vector_3_desc: "Усовершенствованная система векторизации тяги обеспечивает повышенную маневренность по нескольким осям.\n\n§GПодсказка дизайнера: этот модуль используется для повышения противовоздушной обороны самолёта ценой снижения надежности. Рекомендуется для создания более прочного самолёта без затрат на стелс.§!"
- spec_countermeasures_1: "Ранние меры противодействия"
+ spec_countermeasures_1: "Контрмеры и ранний RWR"
  spec_countermeasures_1_desc: "Варианты ранней защиты от ракетного нападения.\n\n§GПодсказка дизайнера: полное увеличение характеристик противовоздушной обороны самолёта. Рекомендуется иметь на самолете хотя бы один модуль противодействия, особенно если самолёт не оснащен модулями "стелс".§!"
- spec_countermeasures_2: "Современные меры противодействия"
+ spec_countermeasures_2: "Контрмеры и современные RWR"
  spec_countermeasures_2_desc: "Современные меры противодействия.\n\n§GПодсказка дизайнера: полное увеличение характеристик противовоздушной обороны самолёта. Рекомендуется иметь на самолете хотя бы один модуль противодействия, особенно если самолёт не оснащён модулями "стелс".§!"
- spec_countermeasures_3: "Радарная глушилка"
+ spec_countermeasures_3: "Комплект средств радиоэлектронной борьбы"
  spec_countermeasures_3_desc: "Противоракетная оборона EW для ракет с радиолокационным наведением.\n\n§GПодсказка дизайнера: полное увеличение противовоздушной обороны самолёта, а также увеличение преимущества по радарам. Рекомендуется иметь на самолёте хотя бы один модуль противодействия, особенно если самолёт не оснащен модулями "стелс".§!"
  spec_countermeasures_4: "Лазерная система жёсткого поражения"
  spec_countermeasures_4_desc: "Контрмеры Hard-Kill для защиты от всех ракетных угроз.\n\n§GПодсказка дизайнера: полное увеличение противовоздушной обороны самолёта, а также увеличение преимущества по радарам. Рекомендуется иметь на самолете хотя бы один модуль противодействия, особенно если самолёт не оснащён модулями "стелс".§!"
