--- a/localisation/french/plane_designer_l_french.yml
+++ b/localisation/french/plane_designer_l_french.yml
@@ -217,12 +217,12 @@
  rocket_weapons_1_desc: "Les premiers pods de fusées permettaient aux avions de disposer d'une méthode rapide pour engager des cibles avec une saturation précise d'ogives hautement explosives, pour un prix nettement moins cher que les munitions guidées."
  rocket_weapons_2: "Roquettes non guidées modernes"
  rocket_weapons_2_desc: "Des roquettes plus précises et des avancées dans les têtes militaires ont fait de ces systèmes d'armes une amélioration significative par rapport à leurs prédécesseurs, tout en restant un moyen bon marché et efficace de fournir des capacités de soutien aérien rapproché et de mission de frappe aux avions."
- countermeasures_1: "Contre-mesures précoces"
- countermeasures_1_desc: "Avec l'apparition des missiles, les avions avaient besoin d'un moyen de se défendre qui ne reposait pas uniquement sur la tentative d'échapper ou d'esquiver un missile. Les leurres et les fusées éclairantes ont fourni des leurres qui ont permis aux pilotes de tenter de tromper les menaces de missiles entrants."
- countermeasures_2: "Contre-mesures modernes"
- countermeasures_2_desc: "Avec l'évolution des ordinateurs, il est devenu plus simple d'automatiser certaines tâches dans un avion. Avec ces systèmes, les avions peuvent automatiquement exécuter un programme pour déployer des contre-mesures lorsqu'ils sont attaqués, au moment optimal pour maximiser leurs chances d'éviter l'attaque."
- countermeasures_3: "Contre-mesures défensives de guerre électronique"
- countermeasures_3_desc: "Avec l'avènement du combat BVR, la capacité à empêcher votre adversaire de vous voir ou de vous verrouiller est devenue de plus en plus cruciale. Les pods de brouillage et les brouilleurs internes permettent aux avions d'empêcher le radar d'un ennemi de les détecter ou de les verrouiller en remplissant leur radar de faux retours, nécessitant de grandes quantités d'énergie pour les brûler."
+ countermeasures_1: "Contre-mesures et RWR précoce"
+ countermeasures_1_desc: "À mesure que les missiles arrivaient sur les lieux, les avions avaient besoin d'un moyen de se défendre contre une attaque qui ne reposait pas simplement sur la tentative de distancer ou d'esquiver un missile. Les paillettes et les fusées éclairantes fournissaient des leurres qui permettaient aux pilotes de tenter de tromper les menaces de missiles entrantes tout en Les récepteurs d'alerte radar ont alerté le pilote lorsque son avion était verrouillé par un radar."
+ countermeasures_2: "Contre-mesures et RWR moderne"
+ countermeasures_2_desc: "Même si les contre-mesures n'ont pas beaucoup changé, les RWR modernes affichent désormais des informations cruciales telles que le type de radar et la distance. Les systèmes d'alerte de missiles modernes peuvent également déployer automatiquement des contre-mesures lors de la détection d'un missile."
+ countermeasures_3: "Suite de guerre électronique"
+ countermeasures_3_desc: "Les avions peuvent désormais transporter leur propre équipement de guerre électronique avancé sans avoir recours à des avions de brouillage dédiés. Ces systèmes puissants offrent une protection inégalée contre des menaces toujours plus meurtrières. Des contre-mesures multispectre offrent une protection améliorée contre les missiles infrarouge moderne."
  countermeasures_4: "Contre-mesures de destruction par laser"
  countermeasures_4_desc: "Alors que les menaces de missiles deviennent de plus en plus difficiles à leurrer, la mission passe de l'esquive à la destruction. Ces systèmes montés sur les avions utilisent des lasers de haute puissance pour désactiver les systèmes de guidage d'un missile entrant, ou pour détoner la charge militaire avant qu'elle n'atteigne sa cible."
  rapid_dragon: "MC sur palettes"
@@ -506,12 +506,12 @@
  spec_thrust_vector_2_desc: "Systèmes de poussée vectorielle conçus pour augmenter la manœuvrabilité.\n\n§GConseil de conception: Utilisez ce module pour augmenter la défense aérienne d'un avion, au détriment de la fiabilité. Recommandé lorsque vous voulez créer un avion plus durable sans payer les coûts de furtivité.§!"
  spec_thrust_vector_3: "Poussée Vectorielle à Deux Axes"
  spec_thrust_vector_3_desc: "Poussée vectorielle avancée qui permet une manœuvrabilité accrue sur plusieurs axes.\n\n§GConseil de conception: Utilisez ce module pour augmenter la défense aérienne d'un avion, au détriment de la fiabilité. Recommandé lorsque vous voulez créer un avion plus durable sans payer les coûts de furtivité.§!"
- spec_countermeasures_1: "Contre-mesures Précoces"
+ spec_countermeasures_1: "Contre-mesures et RWR précoce"
  spec_countermeasures_1_desc: "Premières options de défense contre les attaques de missiles.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
- spec_countermeasures_2: "Contre-mesures Moderne"
+ spec_countermeasures_2: "Contre-mesures et RWR moderne"
  spec_countermeasures_2_desc: "Chaff et flares moderne.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
- spec_countermeasures_3: "Pod de Brouillage Radar"
- spec_countermeasures_3_desc: "Défense de missile EW pour les missiles guidés par radar.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion, ainsi qu'une augmentation de l'avantage radar. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
+ spec_countermeasures_3: "Suite de guerre électronique"
+ spec_countermeasures_3_desc: "Suite de guerre électronique.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion, ainsi qu'une augmentation de l'avantage radar. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
  spec_countermeasures_4: "Système de Contre-mesures Hard-Kill Laser"
  spec_countermeasures_4_desc: "Contre-mesures Hard-Kill pour se protéger contre toutes les menaces de missiles.\n\n§GConseil de conception: Augmentation générale de la statistique de défense aérienne d'un avion, ainsi qu'une augmentation de l'avantage radar. Il est recommandé d'avoir au moins un module de contre-mesure sur un avion, surtout si l'avion n'a pas de modules furtifs.§!"
  engine_light_single_1: "Moteur Léger Précoce"
