fix modifier and loc

--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -1460,7 +1460,7 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_Regimental_Doctors: "The Defence's Regimental Doctors"
  DEN_Civilian_Education: "The Defence Civilian Education"
  DEN_Dental_Plan: "The Defence Dental Plan"
- DEN_army_dynamic_modifier: "Danish Defence Force"
+ DEN_army_dynamic_modifier: "Forsvaret"
  DEN_Danish_Defence_Force: "Danish Defence Force"
  DEN_Danish_Defence_Force_desc: "The Danish Army is the ground force component of the Danish Defense and is responsible for defending Denmark and its interests both domestically and internationally. It was founded in 1614 and has a long history of military service."
  DEN_Dental_Plan_Add_tt: "Modifers §YDanish Defence Force§! \nDivision Organization: §G+10%§! \nMilitary Cost Muliplier: §R+2%§!"
@@ -1533,7 +1533,6 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_terrain_penalty_reduction_tt: "Modifies §YTerrain Penalty Reduction§! for §HForsvaret§! by [?DEN_terrain_penalty_reduction_change|+%] (Current: [?DEN_terrain_penalty_reduction|Y%])"
  DEN_navy_fuel_consumption_factor_tt: "Modifies §YNavy Fuel Consumption§! for §HForsvaret§! by [?DEN_navy_fuel_consumption_factor_change|-%] (Current: [?DEN_navy_fuel_consumption_factor|Y%])"
  DEN_equipment_cost_multiplier_modifier_tt: "Modifies §YEquipment cost§! for §HForsvaret§! by [?DEN_equipment_cost_multiplier_modifier_change|-%] (Current: [?DEN_equipment_cost_multiplier_modifier|Y%])"
- DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HForsvaret§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|-%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
  DEN_military_factories_productivity_tt: "Modifies §YMilitary Factories Productivity§! for §HForsvaret§! by [?DEN_military_factories_productivity_change|-%] (Current: [?DEN_military_factories_productivity|Y%])"
  DEN_dockyard_productivity_tt: "Modifies §YDockyard Productivity§! for §HForsvaret§! by [?DEN_dockyard_productivity_change|+%] (Current: [?DEN_dockyard_productivity|Y%])"
  DEN_monthly_population_tt: "Modifies §YMonthly Population§! for §HKingdom of Denmark§! by [?DEN_monthly_population_change|+%] (Current: [?DEN_monthly_population|Y%])"
@@ -1568,6 +1567,11 @@ DEN_Maersk1_desc: "Established in 1904 by A.P. Møller and Captain Peter Mærsk 
  DEN_production_factory_efficiency_gain_factor_tt: "Modifies §YFactory efficiency gain§! for §HDanish Industry§! by [?DEN_production_factory_efficiency_gain_factor_change|+%] (Current: [?DEN_production_factory_efficiency_gain_factor|Y%])"
  DEN_research_speed_factor_tt: "Modifies §YResearch speed§! for §HDanish Industry§! by [?DEN_research_speed_factor_change|+%] (Current: [?DEN_research_speed_factor|Y%])"
  DEN_tax_gain_multiplier_modifier_tt: "Modifies §YTax gain§! for §HDanish Industry§! by [?DEN_tax_gain_multiplier_modifier_change|+%] (Current: [?DEN_tax_gain_multiplier_modifier|Y%])"
+ DEN_bureaucracy_cost_multiplier_modifier_tt: "Modifies §YAdministration Cost§! for §HKingdom of Denmark§! by [?DEN_bureaucracy_cost_multiplier_modifier_change|+%] (Current: [?DEN_bureaucracy_cost_multiplier_modifier|Y%])"
+ DEN_police_cost_multiplier_modifier_tt: "Modifies §YPolice Cost§! for §HKingdom of Denmark§! by [?DEN_police_cost_multiplier_modifier_change|+%] (Current: [?DEN_police_cost_multiplier_modifier|Y%])"
+ DEN_education_cost_multiplier_modifier_tt: "Modifies §YEducation Cost§! for §HKingdom of Denmark§! by [?DEN_education_cost_multiplier_modifier_change|+%] (Current: [?DEN_education_cost_multiplier_modifier|Y%])"
+ DEN_health_cost_multiplier_modifier_tt: "Modifies §YHealthcare Cost§! for §HKingdom of Denmark§! by [?DEN_health_cost_multiplier_modifier_change|+%] (Current: [?DEN_health_cost_multiplier_modifier|Y%])"
+ DEN_social_cost_multiplier_modifier_tt: "Modifies §YSocial Spendings§! for §HKingdom of Denmark§! by [?DEN_social_cost_multiplier_modifier_change|+%] (Current: [?DEN_social_cost_multiplier_modifier|Y%])"
  DEN_stability_factor_tt: "Modifies §YStability§! for §HKingdom of Denmark§! by [?DEN_stability_factor_change|+%] (Current: [?DEN_stability_factor|Y%])"
  DEN_found_Alternatived_tt: "Found the §YAlternativet§!"
  DEN_found_Nye_Borgerlige_tt: "Found the §YNye Borgerlige§!"
