--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -150,7 +150,7 @@
  tajik_kyrgyz_Tensions_kyr: "Tajik-Kyrgyz Tensions"
  tajik_kyrgyz_Tensions_taj: "Tajik-Kyrgyz Tensions"
 
- TAJ_high_emigration_5: "High Level of Emigration"
+ TAJ_high_emigration_5: "Huge Level of Emigration"
  TAJ_high_emigration_5_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
  TAJ_high_emigration_4: "Substantial Level of Emigration"
  TAJ_high_emigration_4_desc: "With the collapse of the USSR and the deteriorating economic situation, many CIS countries became hostages of increased external migration."
