--- a/localisation/english/replace/replaced_from_vanilla_buildings_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_buildings_l_english.yml
@@ -18,11 +18,11 @@
  #4
  dockyard: "Naval Yard"
  dockyard_plural: "Naval Yards"
- dockyard_desc: "§YNaval Yards§! are represenative of a state's ability to produce military vessels of all sorts ranging from §YPatrol Boats§!, §YConvoys§!, §YDestroyers§!, §YCarriers§! and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y25K§!\nBase GDP Output per §YNaval Yard§!: $§Y1 Billion§!\nBase Energy Consumption: §R-0.4§! GW"
+ dockyard_desc: "§YNaval Yards§! are representative of a state's ability to produce military vessels of all sorts ranging from §YPatrol Boats§!, §YConvoys§!, §YDestroyers§!, §YCarriers§! and more.\n\nProvides the state with:\nBase Number of Required Workers: §Y25K§!\nBase GDP Output per §YNaval Yard§!: $§Y1 Billion§!\nBase Energy Consumption: §R-0.4§! GW"
  #5
  air_base: "Air Base"
  air_base_plural: "Air Bases"
- air_base_desc: "An §YAir Base§! is a storage facility and a military compound for the deployment and prepration of your air forces. It can be stacked to level ten adding additional capacity of §Y50§! Planes per level."
+ air_base_desc: "An §YAir Base§! is a storage facility and a military compound for the deployment and preparation of your air forces. It can be stacked to level ten adding additional capacity of §Y50§! Planes per level."
  #6
  radar_station: "Radar Station"
  radar_station_plural: "Radar Stations"
