--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -139,7 +139,7 @@
  MIGRATION_LAWS_RATE: "$$[?border_control_gain|-3]"
  MIGRATION_LAWS_TOOLTIP: "Migration Control"
  MIGRATION_LAWS_TOOLTIP_DELAYED: "Migration Control represents the expenses incurred from our country's §YMigration Law§! and our current set immigration policy. The base cost of §7Migration Control§! is based on the total population of the country with every level of §YMigration Laws§! increasing the cost.\n\nGDP/C impact on §YMigration Law§!: [?education_cost_gdp_multiplier_display|-%0]\nLaw, Idea and Tech impact on §YMigration Law§!: [?border_cost_multiplier_display|-%0]"
- migration_rate_impact_effect: "Net §YMigration Rate§! Rate"
+ migration_rate_impact_effect: "Net §YMigration Rate§!"
 
  MAXIMUM_MIGRATION_RATE: "§LMaximum Migration Rate:§!"
  MAXIMUM_MIGRATION_RATE_VALUE: "[?ROOT.max_net_immigration_rate|%Y]"
