--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8027,18 +8027,15 @@
  SYR.Nat_Autocracy_desc: ""
  SUR.oligarchism: "£generic_oligarchism_small Primeiro Comando da Capital (PCC)"
  SUR.oligarchism_desc: ""
- TAJ.conservatism: "£TAJ_western_conservative Demokraticheskaya partiya Tadzhikistana"
- TAJ.conservatism_icon: "£TAJ_western_conservative"
- TAJ.conservatism_desc: ""
  TAJ.socialism: "£TAJ_western_social_democrat Hizbi Sotsial-Demokratii Tojikiston"
  TAJ.socialism_icon: "£TAJ_western_social_democrat"
  TAJ.socialism_desc: ""
  TAJ.Communist-State: "£TAJ_emerging_communism Hizbi Kommunistiyi Tojikiston"
  TAJ.Communist-State_icon: "£TAJ_emerging_communism"
  TAJ.Communist-State_desc: ""
- TAJ.Conservative: "£TAJ_emerging_reactionary Hizbi Demokratii Tojikiston"
+ TAJ.Conservative: "£TAJ_emerging_reactionary  People's Democratic Party"
  TAJ.Conservative_icon: "£TAJ_emerging_reactionary"
- TAJ.Conservative_desc: ""
+ TAJ.Conservative_desc: "\n(Tajik Nationalism)\n\nPeople's Democratic Party of Tajikistan, (Tajik-Farsi, romanized: Hizbi Demokratii Tojikiston)\n\nSpearheaded by Emomali Rahmon, the People's Democratic Party of Tajikistan has led Tajikistan with an iron grip. Due to the dominance of the party in Tajikistan, opposition movements attempting to topple the government have sprung up all around Tajikistan. The party has been focused mainly on reviving Tajik culture, identity, and statehood. The party under Emomali Rahmon has heavily restricted Islamic practices in attempt to secularize Tajikistan, taking measures such as banning beards and creating dress codes for women who wish to wear the hijab."
  TAJ.anarchist_communism: "£TAJ_anarchist_communism Hizbi Sotsialistii Tojikiston"
  TAJ.anarchist_communism_icon: "£TAJ_anarchist_communism"
  TAJ.anarchist_communism_desc: ""
@@ -8056,6 +8053,8 @@
  TAJ.Neutral_Muslim_Brotherhood: "£TAJ_non_aligned_moderate_islamist Lali Badakhshan"
  TAJ.Neutral_Muslim_Brotherhood_icon: "£TAJ_non_aligned_moderate_islamist"
  TAJ.Neutral_Muslim_Brotherhood_desc: ""
+ TAJ.Nat_Populism: "£TAJ_western_conservative Democratic Party of Tajikistan"
+ TAJ.Nat_Populism_desc: "\n(£PER_Nat_Populism_small Pan-Iranism/Tajik Nationalism)\n\nDemocratic Party of Tajikistan, (Tajik-Farsi, romanized: Demokraticheskaya Partiya Tadzhikistana)\n\nFounded by Mahmadruzi Iskandarov in 1990, the Democratic Party of Tajikistan is a secular-nationalist party that fought against Emomali Rahmon in the Tajik Civilwar. The party encompasses liberal ideals whilst also fostering nationalist views when advocating for the unification of Iranic lands. The party holds a negative view on Islamist governments and movements which have sprung up in Iran and Afghanistan, even having held talks with Pan-Iranist movements within those nations."
  TAJ.Nat_Autocracy: "£generic_Nat_Autocracy_small Quvvahoi Musallahi Jumhurii Tojikiston"
  TAJ.Nat_Autocracy_desc: ""
  TIB.Monarchist: "£generic_Monarchist_small Dalai Lamas"
