small navalny update

--- a/localisation/english/MD_focus_SOV_l_english.yml
+++ b/localisation/english/MD_focus_SOV_l_english.yml
@@ -5149,3 +5149,10 @@
  russia.116.d: "Even the liberals were able to grab a piece for themselves in such chaos. A government was formed from liberal activists in the North of Russia, they intend to destroy us"
  russia.116.a: "Even these?!"
  NOV_limonka: "Novorossiya"
+ sov_navalny.1.t: "Fate of Georgia"
+ sov_navalny.1.d: "Georgia is our problem in the Caucasus. Now we can decide how we will develop our relations with this state"
+ sov_navalny.1.a: "March to Tbilisi"
+ sov_navalny.1.b: "Peaceful relations is our priority"
+ georgia_broken_relations: "Ruined relations with Georgia"
+ SOV_Georgian_question: "Destiny of Georgia"
+ SOV_Georgian_question_desc: "At the moment, the main task of our foreign policy is to resolve the issue of our further interaction with Georgia as soon as possible"
